[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tools"
version = "0.1.0"
description = "Small Python helpers for provider-based LLM workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic",
    "openai-agents",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["llm_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
